# gliched

./: .gitmodules  CMakeLists.txt  README.md  index.html  readme.md
docs/: index.htm  index.html  map.htm  support.htm
docs/dev/: index.htm  routemap.htm
docs/dev/man/: editing.htm  index.htm  install.htm  tutorial.htm
docs/man/: index.htm
docs/new/: news.htm
example/: html-format.glcs  is-leap-year.glcs  iso5.glcs  iso6.glcs  today-is.glcs
include/glc/: glc.h  glcDefs.h  hicDefs.h
include/utf8/: utf8api.h
lib/: make-glichlib.bat  make-hicslib.bat
lib/glich/: glcBuiltin.glcs  glcScripts.f2c
lib/hics/: ay.glcs  eh.glcs  gregorian.glcs  hebrew.glcs  hicLib.glcs  hicScripts.f2c  jce.glcs  jdn.glcs  julian.glcs  julian_shift.glcs  week.glcs
src/glc/: CMakeLists.txt  glc.cpp  glcFile.cpp  glcFile.h  glcFunction.h  glcHelper.cpp  glcHelper.h  glcLibScripts.cpp  glcLibScripts.h  glcMark.cpp  glcMark.h  glcMath.cpp  glcMath.h  glcObject.cpp  glcObject.h  glcScript.cpp  glcScript.h  glcScriptStore.h  glcStore.cpp  glcStore.h  glcTokenStream.cpp  glcTokenStream.h  glcValue.cpp  glcValue.h  glcVersion.cpp  glcVersion.h  hicAstro.cpp  hicAstro.h  hicBase.cpp  hicBase.h  hicCalendars.h  hicChinese.cpp  hicChinese.h  hicCreateSch.cpp  hicCreateSch.h  hicDatePhrase.cpp  hicDatePhrase.h  hicElement.cpp  hicElement.h  hicFormat.cpp  (+47 more)
src/glcs/: CMakeLists.txt  glcs.cpp  glcs.rc  glcsresource.h
src/gliched/: CMakeLists.txt  fbGeFrame.cpp  fbGeFrame.h  fbGedFrame.cpp  fbGedFrame.h  geApp.cpp  geApp.h  geEdit.cpp  geEdit.h  geEditor.cpp  geEditor.h  geFrame.cpp  geFrame.h  geImages.h  geMainFrame.cpp  geMainFrame.h  gePrefs.h  geVersion.cpp  gedApp.cpp  gedApp.h  gedFrame.cpp  gedFrame.h  main.cpp  prefs.cpp  prefs.h
src/gliched/embed/: geImages.f2c  make-geImages.bat
src/gliched/fb/: fbGeFrame.fbp  fbGedFrame.fbp
src/gliched_original/: fbGeFrame.h  geApp.cpp  geApp.h  geVersion.h  gliched.rc
src/utf8/: CMakeLists.txt  utf8api.cpp
test/: runAllD.bat  runAllR.bat  runScriptsD-file.bat  runScriptsD-skip.bat  runScriptsD.bat  runScriptsR.bat  runSoakD.bat  runSoakR.bat  runUnitD.bat  runUnitR.bat
test/glcscripts/: runtest-D.bat  runtest-R.bat  runtest.bat
test/glcscripts/suite/expressions/at/: at-if001.glcs  at-if003.glcs  at-if004.glcs
test/glcscripts/suite/expressions/bool/: bool001.glcs  bool005.glcs  bool006.glcs  bool007.glcs  bool010.glcs
test/glcscripts/suite/expressions/divide/: divide001.glcs  divide002.glcs  divide003.glcs  divide004.glcs  divide005.glcs  divide006.glcs  divide007.glcs  divide009.glcs
test/glcscripts/suite/expressions/literal/: literal001.glcs  literal007.glcs
test/glcscripts/suite/expressions/minus/: minus002.glcs  minus003.glcs  minus005.glcs  minus007.glcs
test/glcscripts/suite/expressions/mod/: mod004.glcs  mod005.glcs  mod006.glcs
test/glcscripts/suite/expressions/multiply/: multiply001.glcs  multiply003.glcs  multiply004.glcs  multiply005.glcs  multiply006.glcs  multiply007.glcs  multiply008.glcs
test/glcscripts/suite/expressions/plus/: plus001.glcs  plus003.glcs  plus004.glcs  plus005.glcs  plus006.glcs  plus011.glcs  plus014.glcs  plus016.glcs
test/glcscripts/suite/expressions/subscript/: prop001.glcs
test/glcscripts/suite/glich/examples/: object-def-01.glcs
test/glcscripts/suite/glich/objects/: object002.glcs  object003.glcs  object004.glcs  object005.glcs  object006.glcs  object007.glcs  object008.glcs  object010.glcs  object013.glcs  object015.glcs  object016.glcs  object017.glcs  object018.glcs  object019.glcs  object020.glcs  object021.glcs  object022.glcs
test/glcscripts/suite/hics-lib/built-in/: date001.glcs
test/glcscripts/suite/hics-lib/example/: html-format-01.glcs  is-leap-year-01.glcs  iso5-01.glcs  iso6-01.glcs  today-is-01.glcs
test/glcscripts/suite/hics-lib/expressions/: date002.glcs
test/glcscripts/suite/hics-lib/format/: format001.glcs  format002.glcs  format003.glcs  format004.glcs  format005.glcs
test/glcscripts/suite/hics-lib/functions/: element001.glcs  function001.glcs  function013.glcs  record001.glcs
test/glcscripts/suite/hics-lib/sch-fun/: sch-fun001.glcs
test/glcscripts/suite/hics-lib/schemes/: ay-001.glcs  g-001.glcs  hybrid001.glcs  ja-001.glcs  jce-001.glcs  jwn-001.glcs  jwn-002.glcs  jwsn-001.glcs  jwsn-002.glcs
test/glcscripts/suite/hics/format/: format001.glcs  format002.glcs  format003.glcs  format004.glcs  format005.glcs
test/glcscripts/suite/hics/functions/: function001.glcs
test/glcscripts/suite/hics/grammar/: grammar001.glcs  grammar002.glcs  grammar003.glcs  grammar004.glcs
test/glcscripts/suite/hics/hics-lib/: jdn_01.glcs  (+2 more)
test/glcscripts/suite/objects/: object001.glcs  object002.glcs  object004.glcs  object005.glcs  object006.glcs  object009.glcs  object010.glcs  object011.glcs  object012.glcs  object014.glcs
test/glcsoak/: CMakeLists.txt  gsMain.cpp  gsMain.h  gsSch_g.cpp  gsSch_j.cpp  gsSch_ja.cpp
test/glctest/: CMakeLists.txt  glcsGetfns.cpp  glcsTest.cpp  glcsTestmain.h
test/glcunit/: CMakeLists.txt  guAPI.cpp  guMain.cpp  guMain.h  guSch_g.cpp  guSch_h.cpp  guSch_j.cpp  guSch_ja.cpp
website/: index.htm  map.htm  support.htm
website/dev/: index.htm  routemap.htm
website/dev/lib/: index.htm
website/dev/man/: gloss.htm  index.htm
website/dev/man/defs/: ay.htm  eh.htm  g.htm  go.htm  gw.htm  index.htm  j.htm  ja.htm  jap.htm  jce.htm  jdn.htm  jn.htm  jswn.htm  jwn.htm  jwsn.htm
website/dev/man/hics/: bi-functions.htm  ebnf.htm  expr.htm  format.htm  grammar.htm  index.htm  lexicon.htm  phrase.htm  scheme.htm  set.htm
website/dev/man/script/: bi-functions.htm  bi-objects.htm  command.htm  do.htm  ebnf.htm  end.htm  expr.htm  file.htm  function.htm  if.htm  index.htm  let.htm  mark.htm  object.htm  set.htm  write.htm
website/dev/man/tut/: glich.htm  hics_1.htm  hics_2.htm  index.htm
website/dev/scripts/: index.htm
website/dev/tests/: index.htm  script.htm
website/man/: index.htm
website/new/: news.htm
website/sys/: glich.css  livery.css
webutil/: layout.json  make-from-docs.bat  make-from-webmod.bat  manual-0-1-0.json
(+161 files in other folders)
